# Resume-AI-Parser-Filler

./: .env  README.md  form_filling_agent.py  job_listing_parser.py  job_listings.txt  job_search_crawler.py  job_search_identifier.py  main.py  model_listing.json  models.py  pyproject.toml  resume_analyzer.py  testing.ipynb
prompts/resume_analyzer/: Modelfile  resume_analyzer_fill_empty.txt  resume_analyzer_main.txt
resume_analyzer_responses/: raw_response.json  raw_text.txt
resume_analyzer_responses/new_resume/: raw_response.json  raw_text.txt
resume_analyzer_responses/old_resume/: final_response.json  raw_response.json  raw_text.txt
