[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "llama-parse>=0.5.19",
    "logger>=1.4",
    "nvitop>=1.4.1",
    "pydantic-ai>=0.0.19",
    "pydantic[email]>=2.10.5",
    "python-dotenv>=1.0.1",
]
